# ormspace

./: README.md  dev.py  pyproject.toml
ormspace/: alias.py  annotations.py  bases.py  containers.py  context.py  database.py  enum.py  exception.py  functions.py  key_bases.py  key_model.py  keybase.py  keymodel.py  keys.py  metadata.py  metainfo.py  model.py  regex.py  search_model.py  settings.py  space_settings.py
spacemodel/: detabase.py  functions.py  keymodel.py  metadata.py  settings.py
