[tool.poetry]
name = "spacemodel"
version = "0.1.0"
description = "Pydantic models working with deta.space api, including ORM features."
authors = ["Daniel Arantes <arantesdv@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
