[tool.poetry]
name = "ormspace"
version = "0.2.5"
description = "Pydantic models working with deta.space api, including ORM features."
authors = ["Daniel Arantes <arantesdv@me.com>"]
license = "MIT"
readme = 'README.md'
exclude = ['.env', 'dev.py']

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
deta = {extras = ["async"], version = "^1.2.0"}
anyio = "^4.0.0"
bcrypt = "^4.0.1"
Unidecode = "^1.3.7"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
